[gd_scene load_steps=13 format=4 uid="uid://bf3kmayt1neoq"]

[ext_resource type="Script" path="res://Assets/Scripts/ResourceSceneManager.gd" id="1_1nf3s"]
[ext_resource type="Texture2D" uid="uid://b3jofj8yj2klr" path="res://Assets/Scenes/atlas.png" id="1_6vogn"]
[ext_resource type="Script" path="res://Assets/Scenes/Camera.gd" id="3_f1j7i"]
[ext_resource type="Texture2D" uid="uid://cb63gwp2d8ml6" path="res://metal.png" id="3_y468n"]
[ext_resource type="Texture2D" uid="uid://bwda6w6su1ax" path="res://energi.png" id="4_p68tr"]
[ext_resource type="Texture2D" uid="uid://bc83em6lfcm4t" path="res://poison.png" id="5_myffd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6p8ol"]
texture = ExtResource("1_6vogn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0

[sub_resource type="TileSet" id="TileSet_upsel"]
sources/0 = SubResource("TileSetAtlasSource_6p8ol")

[sub_resource type="SystemFont" id="SystemFont_uxh36"]
font_names = PackedStringArray("Bauhaus 93")

[sub_resource type="LabelSettings" id="LabelSettings_3uyj3"]

[sub_resource type="SystemFont" id="SystemFont_nxtik"]
font_names = PackedStringArray("Bauhaus 93")

[sub_resource type="SystemFont" id="SystemFont_ka2cy"]
font_names = PackedStringArray("Bauhaus 93")

[node name="Game" type="Node"]

[node name="Systems" type="Node" parent="."]

[node name="ResourceManager" type="Node" parent="Systems"]
script = ExtResource("1_1nf3s")

[node name="World" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="World"]
tile_map_data = PackedByteArray("AAABAAEAAAACAAYAAAABAAIAAAACAAcAAAABAAMAAAACAAgAAAACAAEAAAAAAAYAAAACAAIAAAAAAAcAAAACAAMAAAAAAAgAAAADAAEAAAABAAYAAAADAAIAAAABAAcAAAADAAMAAAABAAgAAAAEAAEAAAACAAYAAAAEAAIAAAACAAcAAAAEAAMAAAACAAgAAAAFAAEAAAAFAAYAAAAFAAIAAAAFAAcAAAAFAAMAAAAFAAgAAAAGAAEAAAADAAYAAAAGAAIAAAADAAcAAAAGAAMAAAADAAgAAAAHAAEAAAAEAAYAAAAHAAIAAAAEAAcAAAAHAAMAAAAEAAgAAAAIAAEAAAAAAAYAAAAIAAIAAAAAAAcAAAAIAAMAAAAAAAgAAAAGAAQAAAADAAYAAAAGAAUAAAADAAcAAAAGAAYAAAADAAgAAAAHAAQAAAAEAAYAAAAHAAUAAAAEAAcAAAAHAAYAAAAEAAgAAAAIAAQAAAAFAAYAAAAIAAUAAAAFAAcAAAAIAAYAAAAFAAgAAAADAAQAAAADAAYAAAADAAUAAAADAAcAAAADAAYAAAADAAgAAAAEAAQAAAAEAAYAAAAEAAUAAAAEAAcAAAAEAAYAAAAEAAgAAAAFAAQAAAAFAAYAAAAFAAUAAAAFAAcAAAAFAAYAAAAFAAgAAAADAAcAAAADAAYAAAADAAgAAAADAAcAAAADAAkAAAADAAgAAAAEAAcAAAAEAAYAAAAEAAgAAAAEAAcAAAAEAAkAAAAEAAgAAAAFAAcAAAAFAAYAAAAFAAgAAAAFAAcAAAAFAAkAAAAFAAgAAAAGAAcAAAADAAYAAAAGAAgAAAADAAcAAAAGAAkAAAADAAgAAAAHAAcAAAAEAAYAAAAHAAgAAAAEAAcAAAAHAAkAAAAEAAgAAAAIAAcAAAAFAAYAAAAIAAgAAAAFAAcAAAAIAAkAAAAFAAgAAAAGAAoAAAAAAAYAAAAGAAsAAAAAAAcAAAAGAAwAAAAAAAgAAAAHAAoAAAABAAYAAAAHAAsAAAABAAcAAAAHAAwAAAABAAgAAAAIAAoAAAACAAYAAAAIAAsAAAACAAcAAAAIAAwAAAACAAgAAAAJAAoAAAADAAYAAAAJAAsAAAADAAcAAAAJAAwAAAADAAgAAAAKAAoAAAAEAAYAAAAKAAsAAAAEAAcAAAAKAAwAAAAEAAgAAAALAAoAAAAFAAYAAAALAAsAAAAFAAcAAAALAAwAAAAFAAgAAAAJAAcAAAADAAYAAAAJAAgAAAADAAcAAAAJAAkAAAADAAgAAAAKAAcAAAAEAAYAAAAKAAgAAAAEAAcAAAAKAAkAAAAEAAgAAAALAAcAAAAFAAYAAAALAAgAAAAFAAcAAAALAAkAAAAFAAgAAAAJAAQAAAADAAYAAAAJAAUAAAADAAcAAAAJAAYAAAADAAgAAAAKAAQAAAAEAAYAAAAKAAUAAAAEAAcAAAAKAAYAAAAEAAgAAAALAAQAAAADAAgAAAALAAUAAAAFAAcAAAALAAYAAAAFAAgAAAAJAAEAAAABAAYAAAAJAAIAAAABAAcAAAAJAAMAAAABAAgAAAAKAAEAAAAAAAgAAAAKAAIAAAACAAcAAAAKAAMAAAACAAgAAAALAAEAAAABAAgAAAALAAIAAAAAAAcAAAALAAMAAAAAAAgAAAAMAAEAAAACAAgAAAAMAAIAAAADAAYAAAAMAAMAAAADAAcAAAANAAEAAAACAAYAAAANAAIAAAADAAYAAAANAAMAAAADAAcAAAAOAAEAAAAAAAYAAAAOAAIAAAAEAAYAAAAOAAMAAAAEAAcAAAAPAAEAAAABAAYAAAAPAAIAAAADAAYAAAAPAAMAAAADAAcAAAAQAAEAAAACAAYAAAAQAAIAAAADAAYAAAAQAAMAAAADAAcAAAARAAEAAAAAAAYAAAARAAIAAAAEAAYAAAARAAMAAAAEAAcAAAAPAAQAAAADAAgAAAAPAAUAAAAIAAcAAAAPAAYAAAAIAAgAAAAQAAQAAAADAAgAAAAQAAUAAAAHAAYAAAAQAAYAAAAHAAcAAAARAAQAAAAEAAgAAAARAAUAAAAGAAYAAAARAAYAAAAGAAcAAAAMAAQAAAADAAgAAAAMAAUAAAAGAAgAAAAMAAYAAAAGAAcAAAANAAQAAAADAAgAAAANAAUAAAAGAAcAAAANAAYAAAAGAAgAAAAOAAQAAAAEAAgAAAAOAAUAAAAHAAcAAAAOAAYAAAAHAAgAAAAMAAcAAAAGAAgAAAAMAAgAAAAGAAcAAAAMAAkAAAAGAAYAAAANAAcAAAAGAAYAAAANAAgAAAAGAAcAAAANAAkAAAAHAAYAAAAOAAcAAAAHAAYAAAAOAAgAAAAHAAcAAAAOAAkAAAAGAAgAAAAMAAoAAAAGAAcAAAAMAAsAAAAGAAcAAAAMAAwAAAADAAgAAAANAAoAAAAHAAcAAAANAAsAAAAHAAcAAAANAAwAAAADAAYAAAAOAAoAAAAGAAcAAAAOAAsAAAAGAAYAAAAOAAwAAAADAAYAAAAMAA0AAAABAAYAAAAMAA4AAAABAAcAAAAMAA8AAAABAAgAAAANAA0AAAADAAcAAAANAA4AAAADAAgAAAANAA8AAAACAAgAAAAOAA0AAAADAAcAAAAOAA4AAAADAAgAAAAOAA8AAAAAAAgAAAAPAA0AAAAEAAcAAAAPAA4AAAAEAAgAAAAPAA8AAAABAAgAAAAQAA0AAAAFAAcAAAAQAA4AAAAFAAgAAAAQAA8AAAACAAgAAAARAA0AAAAFAAYAAAARAA4AAAAFAAcAAAARAA8AAAAFAAgAAAAPAAoAAAAHAAcAAAAPAAsAAAAHAAYAAAAPAAwAAAAEAAYAAAAQAAoAAAAGAAcAAAAQAAsAAAAHAAYAAAAQAAwAAAAFAAYAAAARAAoAAAAHAAcAAAARAAsAAAAGAAYAAAARAAwAAAAGAAcAAAAPAAcAAAAAAAQAAAAPAAgAAAAAAAUAAAAPAAkAAAAHAAgAAAAQAAcAAAABAAEAAAAQAAgAAAABAAEAAAAQAAkAAAAGAAgAAAARAAcAAAABAAEAAAARAAgAAAABAAEAAAARAAkAAAAHAAgAAAASAAQAAAADAAgAAAASAAUAAAAGAAcAAAASAAYAAAAHAAcAAAATAAQAAAADAAgAAAATAAUAAAAHAAcAAAATAAYAAAAHAAcAAAAUAAQAAAAEAAgAAAAUAAUAAAAHAAcAAAAUAAYAAAAGAAcAAAASAAEAAAABAAYAAAASAAIAAAADAAYAAAASAAMAAAADAAcAAAATAAEAAAACAAYAAAATAAIAAAADAAYAAAATAAMAAAADAAcAAAAUAAEAAAAAAAYAAAAUAAIAAAAEAAYAAAAUAAMAAAAEAAcAAAAVAAEAAAABAAYAAAAVAAIAAAAFAAYAAAAVAAMAAAAFAAcAAAAWAAEAAAACAAYAAAAWAAIAAAACAAcAAAAWAAMAAAADAAYAAAAXAAEAAAAAAAYAAAAXAAIAAAAAAAcAAAAXAAMAAAAEAAYAAAAVAAQAAAAFAAgAAAAVAAUAAAAGAAYAAAAVAAYAAAAGAAcAAAAWAAQAAAADAAcAAAAWAAUAAAADAAgAAAAWAAYAAAAHAAcAAAAXAAQAAAAEAAcAAAAXAAUAAAAEAAgAAAAXAAYAAAAFAAgAAAAVAAcAAAAGAAYAAAAVAAgAAAAGAAcAAAAVAAkAAAAHAAgAAAAWAAcAAAAHAAYAAAAWAAgAAAAHAAcAAAAWAAkAAAAEAAgAAAAXAAcAAAAFAAYAAAAXAAgAAAAFAAcAAAAXAAkAAAAFAAgAAAAVAAoAAAAHAAcAAAAVAAsAAAAHAAgAAAAVAAwAAAADAAgAAAAWAAoAAAAEAAYAAAAWAAsAAAAEAAcAAAAWAAwAAAAEAAgAAAAXAAoAAAAFAAYAAAAXAAsAAAAFAAcAAAAXAAwAAAAFAAgAAAAVAA0AAAABAAYAAAAVAA4AAAABAAcAAAAVAA8AAAABAAgAAAAWAA0AAAACAAYAAAAWAA4AAAACAAcAAAAWAA8AAAACAAgAAAAXAA0AAAAAAAYAAAAXAA4AAAAAAAcAAAAXAA8AAAAAAAgAAAASAA0AAAADAAYAAAASAA4AAAADAAcAAAASAA8AAAADAAgAAAATAA0AAAAEAAYAAAATAA4AAAAEAAcAAAATAA8AAAAEAAgAAAAUAA0AAAAAAAYAAAAUAA4AAAAAAAcAAAAUAA8AAAAAAAgAAAASAAcAAAAHAAYAAAASAAgAAAAHAAYAAAASAAkAAAAGAAYAAAATAAcAAAABAAEAAAATAAgAAAAHAAcAAAATAAkAAAAHAAYAAAAUAAcAAAAHAAgAAAAUAAgAAAAGAAcAAAAUAAkAAAAGAAgAAAASAAoAAAAGAAcAAAASAAsAAAAHAAYAAAASAAwAAAAHAAcAAAATAAoAAAAHAAcAAAATAAsAAAAHAAgAAAATAAwAAAAEAAgAAAAUAAoAAAAGAAcAAAAUAAsAAAAGAAgAAAAUAAwAAAAFAAgAAAAYAAoAAAADAAYAAAAYAAsAAAADAAcAAAAYAAwAAAADAAgAAAAZAAoAAAAEAAYAAAAZAAsAAAAEAAcAAAAZAAwAAAAEAAgAAAAaAAoAAAAAAAYAAAAaAAsAAAAAAAcAAAAaAAwAAAAAAAgAAAAYAAcAAAADAAYAAAAYAAgAAAADAAcAAAAYAAkAAAADAAgAAAAZAAcAAAAEAAYAAAAZAAgAAAAEAAcAAAAZAAkAAAAEAAgAAAAaAAcAAAAAAAYAAAAaAAgAAAAAAAcAAAAaAAkAAAAAAAgAAAAYAAQAAAAFAAcAAAAYAAUAAAAFAAgAAAAYAAYAAAADAAgAAAAZAAQAAAAEAAYAAAAZAAUAAAAEAAcAAAAZAAYAAAAEAAgAAAAaAAQAAAAAAAYAAAAaAAUAAAAAAAcAAAAaAAYAAAAAAAgAAAAYAAEAAAABAAYAAAAYAAIAAAABAAcAAAAYAAMAAAAFAAYAAAAZAAEAAAACAAYAAAAZAAIAAAACAAcAAAAZAAMAAAACAAgAAAAaAAEAAAAAAAYAAAAaAAIAAAAAAAcAAAAaAAMAAAAAAAgAAAAJAA0AAAABAAYAAAAJAA4AAAABAAcAAAAJAA8AAAABAAgAAAAKAA0AAAACAAYAAAAKAA4AAAACAAcAAAAKAA8AAAACAAgAAAALAA0AAAAAAAYAAAALAA4AAAAAAAcAAAALAA8AAAAAAAgAAAAGAA0AAAAAAAYAAAAGAA4AAAAAAAcAAAAGAA8AAAAAAAgAAAAHAA0AAAABAAYAAAAHAA4AAAABAAcAAAAHAA8AAAABAAgAAAAIAA0AAAAAAAYAAAAIAA4AAAAAAAcAAAAIAA8AAAAAAAgAAAADAAoAAAAAAAYAAAADAAsAAAAAAAcAAAADAAwAAAAAAAgAAAAEAAoAAAABAAYAAAAEAAsAAAABAAcAAAAEAAwAAAABAAgAAAAFAAoAAAACAAYAAAAFAAsAAAACAAcAAAAFAAwAAAACAAgAAAAAAAoAAAAAAAYAAAAAAAsAAAAAAAcAAAAAAAwAAAAAAAgAAAABAAoAAAABAAYAAAABAAsAAAABAAcAAAABAAwAAAABAAgAAAACAAoAAAACAAYAAAACAAsAAAACAAcAAAACAAwAAAACAAgAAAAAAAcAAAAAAAYAAAAAAAgAAAAAAAcAAAAAAAkAAAAAAAgAAAABAAcAAAABAAYAAAABAAgAAAABAAcAAAABAAkAAAABAAgAAAACAAcAAAACAAYAAAACAAgAAAACAAcAAAACAAkAAAACAAgAAAAAAAQAAAAAAAYAAAAAAAUAAAAAAAcAAAAAAAYAAAAAAAgAAAABAAQAAAABAAYAAAABAAUAAAABAAcAAAABAAYAAAABAAgAAAACAAQAAAACAAYAAAACAAUAAAACAAcAAAACAAYAAAACAAgAAAD//wEAAAAAAAYAAAD//wIAAAAAAAcAAAD//wMAAAAAAAgAAAAAAAEAAAABAAYAAAAAAAIAAAABAAcAAAAAAAMAAAABAAgAAAACAP7/AAAAAAYAAAACAP//AAAAAAcAAAACAAAAAAAAAAgAAAADAP7/AAABAAYAAAADAP//AAABAAcAAAADAAAAAAABAAgAAAAEAP7/AAACAAYAAAAEAP//AAACAAcAAAAEAAAAAAACAAgAAAAFAP7/AAAAAAYAAAAFAP//AAAAAAcAAAAFAAAAAAAAAAgAAAAGAP7/AAABAAYAAAAGAP//AAABAAcAAAAGAAAAAAABAAgAAAAHAP7/AAACAAYAAAAHAP//AAACAAcAAAAHAAAAAAACAAgAAAAIAP7/AAAAAAYAAAAIAP//AAAAAAcAAAAIAAAAAAAAAAgAAAAJAP7/AAABAAYAAAAJAP//AAABAAcAAAAJAAAAAAABAAgAAAAKAP7/AAACAAYAAAAKAP//AAAAAAYAAAAKAAAAAAAAAAcAAAAOAP7/AAAAAAYAAAAOAP//AAAAAAcAAAAOAAAAAAAAAAgAAAAPAP7/AAABAAYAAAAPAP//AAABAAcAAAAPAAAAAAABAAgAAAAQAP7/AAACAAYAAAAQAP//AAACAAcAAAAQAAAAAAACAAgAAAARAP7/AAAAAAYAAAARAP//AAAAAAcAAAARAAAAAAAAAAgAAAASAP7/AAABAAYAAAASAP//AAABAAcAAAASAAAAAAABAAgAAAATAP7/AAACAAYAAAATAP//AAACAAcAAAATAAAAAAACAAgAAAAbAAEAAAABAAYAAAAbAAIAAAABAAcAAAAbAAMAAAABAAgAAAAcAAEAAAACAAYAAAAcAAIAAAACAAcAAAAcAAMAAAACAAgAAAAbAAQAAAABAAYAAAAbAAUAAAABAAcAAAAbAAYAAAABAAgAAAAcAAQAAAACAAYAAAAcAAUAAAACAAcAAAAcAAYAAAACAAgAAAAbAAcAAAABAAYAAAAbAAgAAAABAAcAAAAbAAkAAAABAAgAAAAcAAcAAAACAAYAAAAcAAgAAAACAAcAAAAcAAkAAAACAAgAAAAbAAoAAAABAAYAAAAbAAsAAAABAAcAAAAbAAwAAAABAAgAAAAcAAoAAAACAAYAAAAcAAsAAAACAAcAAAAcAAwAAAACAAgAAAAaAA0AAAAAAAYAAAAaAA4AAAAAAAcAAAAaAA8AAAAAAAgAAAAbAA0AAAABAAYAAAAbAA4AAAABAAcAAAAbAA8AAAABAAgAAAAcAA0AAAACAAYAAAAcAA4AAAACAAcAAAAcAA8AAAACAAgAAAAYAA0AAAABAAYAAAAYAA4AAAABAAcAAAAYAA8AAAABAAgAAAAZAA0AAAACAAYAAAAZAA4AAAACAAcAAAAZAA8AAAACAAgAAAAXABAAAAAAAAYAAAAXABEAAAAAAAcAAAAXABIAAAAAAAgAAAAYABAAAAABAAYAAAAYABEAAAABAAcAAAAYABIAAAABAAgAAAAZABAAAAACAAYAAAAZABEAAAACAAcAAAAZABIAAAACAAgAAAAUABAAAAAAAAYAAAAUABEAAAAAAAcAAAAUABIAAAAAAAgAAAAVABAAAAABAAYAAAAVABEAAAABAAcAAAAVABIAAAABAAgAAAAWABAAAAACAAYAAAAWABEAAAACAAcAAAAWABIAAAACAAgAAAARABAAAAAAAAYAAAARABEAAAAAAAcAAAARABIAAAAAAAgAAAASABAAAAABAAYAAAASABEAAAABAAcAAAASABIAAAABAAgAAAATABAAAAACAAYAAAATABEAAAACAAcAAAATABIAAAACAAgAAAAOABAAAAAAAAYAAAAOABEAAAAAAAcAAAAOABIAAAAAAAgAAAAPABAAAAABAAYAAAAPABEAAAABAAcAAAAPABIAAAABAAgAAAAQABAAAAACAAYAAAAQABEAAAACAAcAAAAQABIAAAACAAgAAAALAP//AAABAAYAAAALAAAAAAABAAcAAAAMAP//AAACAAYAAAAMAAAAAAACAAcAAAA=")
tile_set = SubResource("TileSet_upsel")

[node name="Camera2D" type="Camera2D" parent="World"]
position = Vector2(260, 127)
zoom = Vector2(1.5, 1.5)
process_callback = 0
script = ExtResource("3_f1j7i")

[node name="MetalResource" type="Label" parent="World/Camera2D"]
unique_name_in_owner = true
offset_left = -381.0
offset_top = -184.0
offset_right = -351.0
offset_bottom = -161.0
theme_override_fonts/font = SubResource("SystemFont_uxh36")
text = "100"
label_settings = SubResource("LabelSettings_3uyj3")
horizontal_alignment = 1

[node name="Metal" type="Sprite2D" parent="World/Camera2D/MetalResource"]
position = Vector2(14, -14)
texture = ExtResource("3_y468n")

[node name="EnergyResource" type="Label" parent="World/Camera2D"]
unique_name_in_owner = true
offset_left = -346.0
offset_top = -184.0
offset_right = -318.0
offset_bottom = -161.0
theme_override_fonts/font = SubResource("SystemFont_nxtik")
text = "100"
horizontal_alignment = 1

[node name="Energi" type="Sprite2D" parent="World/Camera2D/EnergyResource"]
position = Vector2(12, -14)
texture = ExtResource("4_p68tr")

[node name="ScienceResource" type="Label" parent="World/Camera2D"]
unique_name_in_owner = true
offset_left = -311.0
offset_top = -184.0
offset_right = -283.0
offset_bottom = -161.0
theme_override_fonts/font = SubResource("SystemFont_ka2cy")
text = "100"
horizontal_alignment = 1

[node name="Poison" type="Sprite2D" parent="World/Camera2D/ScienceResource"]
position = Vector2(14, -13)
texture = ExtResource("5_myffd")
region_rect = Rect2(100, 100, 100, 100)
